--- a/src/app/components/goal/goal.component.html
+++ b/src/app/components/goal/goal.component.html
@@ -4,8 +4,8 @@
   <div class="row">
     <div class="col-md-6 mb-3">
       <div *ngFor='let goal of goals;let i = index'>
-        <app-goal-details [goal]='goal' (isComplete)='deleteGoal($event, i)'>
-        </app-goal-details>
+        <button class="btn btn-primary" (click)='goToUrl(goal.id)'>View Details</button>
+        <button class="btn btn-outline-danger" (click)='deleteGoal(i)'>Delete Goal</button>
       </div>
     </div>
     <div class="col-md-6">
